fix alignment in multi row forms
git-svn-id: file:///www/metaways/svn.tine20.org/repo/trunk@1663 8d11cdf3-9d2f-0410-bbb5-e098f187f06b

--- a/tine20/Tinebase/css/ux/grid/IconTextField.css
+++ b/tine20/Tinebase/css/ux/grid/IconTextField.css
@@ -3,5 +3,6 @@
     height: 16px;
     position: relative;
     top: 3px;
-    margin-right: 2px;  
+    margin-right: 3px;
+    margin-top: -3px;  
 }
